<resources>
    <string name="app_name">Magic League</string>

    <string name="default_health_value">20</string>
    <string name="color">Color</string>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>
    <string name="bottom_navigation_play">Play</string>
    <string name="bottom_navigation_play_add">+</string>
    <string name="bottom_navigation_play_subtract">-</string>
    <string name="bottom_navigation_report">Report</string>
    <string name="bottom_navigation_standings">Standings</string>

    <string name="leagues_title">Leagues</string>

    <string name="report_title">Report Match</string>
    <string name="report_winner">Winner</string>
    <string name="report_loser">Loser</string>
    <string name="report_submit">Submit</string>
    <string name="report_games_played">Games played</string>

    <string name="score_decrement">-</string>
    <string name="score_increment">+</string>

    <string name="settings_dark_mode_enabled">Dark mode enabled</string>
    <string name="settings_league_selection">League Selection</string>
    <string name="settings_league_selection_summary">Pick which league you would like to report </string>
    <string name="settings_title">Settings</string>

    <string name="standings_week_one">Week 1</string>
    <string name="standings_week_two">Week 2</string>
    <string name="standings_week_three">Week 3</string>
    <string name="standings_week_four">Week 4</string>

    <string name="toolbar_title_format">Magic League - %s</string>

</resources>
