<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/color_picker_size"
        android:layout_height="@dimen/color_picker_size">

        <ImageButton
            android:id="@+id/color_white"
            style="@style/ColorCircle"
            android:backgroundTint="@color/magic_white"
            android:contentDescription="@string/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/color_green"
            style="@style/ColorCircle"
            android:layout_marginTop="@dimen/circle_vertical_spacing_1"
            android:backgroundTint="@color/magic_green"
            android:contentDescription="@string/color_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_white" />

        <ImageButton
            android:id="@+id/color_blue"
            style="@style/ColorCircle"
            android:layout_marginTop="@dimen/circle_vertical_spacing_1"
            android:backgroundTint="@color/magic_blue"
            android:contentDescription="@string/color_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_white" />

        <ImageButton
            android:id="@+id/color_red"
            style="@style/ColorCircle"
            android:layout_marginStart="@dimen/circle_horizontal_spacing_1"
            android:layout_marginTop="@dimen/circle_vertical_spacing_2"
            android:backgroundTint="@color/magic_red"
            android:contentDescription="@string/color_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_green" />

        <ImageButton
            android:id="@+id/color_black"
            style="@style/ColorCircle"
            android:layout_marginEnd="@dimen/circle_horizontal_spacing_1"
            android:layout_marginTop="@dimen/circle_vertical_spacing_2"
            android:backgroundTint="@color/magic_black"
            android:contentDescription="@string/color_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/color_blue" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
