<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/scoreboard_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

        <ImageView
            android:id="@+id/scoreboard_bottom_player_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#850801"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard_guideline" />

        <TextView
            android:id="@+id/scoreboard_bottom_player_score"
            style="@style/ScoreboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_health_value"
            android:textSize="108sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard_guideline" />

        <TextView
            android:id="@+id/scoreboard_bottom_player_add"
            style="@style/ScoreboardText.AddSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/bottom_navigation_play_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard_guideline" />

        <TextView
            android:id="@+id/scoreboard_bottom_player_subtract"
            style="@style/ScoreboardText.AddSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/bottom_navigation_play_subtract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreboard_guideline" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/scoreboard_top_player_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#04338a"
            app:layout_constraintBottom_toTopOf="@id/scoreboard_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreboard_top_player_score"
            style="@style/ScoreboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/default_health_value"
            android:textSize="108sp"
            app:layout_constraintBottom_toTopOf="@id/scoreboard_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreboard_top_player_add"
            style="@style/ScoreboardText.AddSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/bottom_navigation_play_subtract"
            app:layout_constraintBottom_toTopOf="@id/scoreboard_guideline"
            app:layout_constraintHorizontal_bias=".1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreboard_top_player_subtract"
            style="@style/ScoreboardText.AddSubtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="@string/bottom_navigation_play_add"
            app:layout_constraintBottom_toTopOf="@id/scoreboard_guideline"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>
